<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:maxWidth="720dp"
    android:maxHeight="1280dp"
    android:minWidth="360dp"
    android:minHeight="640dp"
    tools:context=".views.login.LoginSignIn">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/contentDes"
        android:src="@drawable/sevillaartardecer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/prplBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        app:cardBackgroundColor="@color/purple_500"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="117dp">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/welcomeText"
                android:textColor="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credentialsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/credentials"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/formFieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/EmailField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/EmailField"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/EmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/EmailInput"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/PasswordField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/PasswordField"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/PasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/PasswordInput"
                    android:password="true"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/signInBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_btn"
                        android:backgroundTint="@color/purple_700"
                        android:text="@string/SignInBtn"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_weight=".5" />

                    <Button
                        android:id="@+id/signUpBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:backgroundTint="#003700B3"
                        android:text="@string/SignUpBtn"
                        android:textColor="@color/purple_200"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
