<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.ProfileClient">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginBottom="630dp"
        android:background="@drawable/round_navbar"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/browserHeaderProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@drawable/browser"
            android:ems="10"
            android:hint="@string/NonText"
            android:inputType="text" />


        <LinearLayout
            android:id="@+id/categoriesLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/clearFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:background="@drawable/baseline_clear_24" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/catgeoriesTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/NavBarCat"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/setBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/baseline_settings_24"
                tools:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/serviceTextHub"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="354dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:paddingEnd="0dp"
        android:text="@string/ServicesText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.909"
        tools:ignore="RtlCompat" />

    <HorizontalScrollView
        android:id="@+id/servicesLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceTextHub">

        <LinearLayout
            android:id="@+id/linerHorizontalServiceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/scrollUpBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="372dp"
        android:background="@drawable/outline_arrow_circle_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="146dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        tools:layout_editor_absoluteX="180dp">

        <TextView
            android:id="@+id/yourDataText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YourData"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NameField" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/NameField"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EmailField" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EmailField"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PasswordField" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PasswordField"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/editDataBtn"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/EditText"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>